--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: Roboto;
+  src: url(./assets/fonts/Roboto/Roboto-Regular.ttf);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -6,5 +11,6 @@
 
 body {
   height: 100vh;
+  font-family: Roboto;
   background: linear-gradient(to bottom, #FF8DA9, #FFEB84);
 }
